fix(home): add flex wrap

--- a/css/styles.css
+++ b/css/styles.css
@@ -91,9 +91,11 @@ footer {
   justify-content: center;
 }
 .home .teasers {
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-evenly;
+  flex-wrap: wrap;
   gap: 1.25rem;
   border-radius: 0.375rem;
   padding: 1.25rem;
