--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -8,11 +8,12 @@
   // background-color: white;
 
   .teasers {
-    // width: 70%;
+    width: 100%;
 
     display: flex;
     align-items: center;
     justify-content: space-evenly;
+    flex-wrap: wrap;
     gap: $spacing;
 
     border-radius: $border-radius;
@@ -38,3 +39,10 @@
     // background-color: white;
   }
 }
+
+// @media only screen and (max-width: $breakpoint-lg) {
+//   .teasers {
+//     display: flex;
+//     flex-direction: column;
+//   }
+// }
